
cmake_minimum_required(VERSION 3.18)
set(AppName "LChannel3D")
set(AppSrc "lbm3d_L.cpp")
if (NOT OPTIMISE)
    add_executable(${AppName}SeqDev ${LibSrc} ${AppSrc})
    target_include_directories(${AppName}SeqDev PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(${AppName}SeqDev OPS::ops_hdf5_seq OPS::ops_seq ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES} MPI::MPI_CXX)
    target_compile_definitions(${AppName}SeqDev PRIVATE -DOPS_3D -DCPU -DLEVEL=DebugLevel=0)
    if (MPI)
        add_executable(${AppName}MpiDev ${LibSrc} ${AppSrc})
        target_include_directories(${AppName}MpiDev PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
        target_link_libraries(${AppName}MpiDev OPS::ops_hdf5_mpi OPS::ops_mpi ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES} MPI::MPI_CXX)
        target_compile_definitions(${AppName}MpiDev PRIVATE -DOPS_3D -DOPS_MPI -DCPU -DLEVEL=DebugLevel=0 )
    endif()
endif ()
