
cmake_minimum_required(VERSION 3.18)

find_package(Eigen3 3.2 REQUIRED)
find_package(Boost 1.68.0 REQUIRED)

include_directories(${EIGEN3_INCLUDE_DIR})
include_directories(${Boost_INCLUDE_DIR})

set(AppName MieTheory)
set(AppSrc mie_theory.cpp MieConfig.cpp)
set(LibSrc  block.cpp)
set(LibHeadList "")
set(SpaceDim 3)
if (NOT OPTIMISE)
    # Set the path for LibSrc
    set(LibSrcPath "")
    foreach(Src IN LISTS LibSrc)
        list(APPEND LibSrcPath ${LibDir}/${Src})
    endforeach(Src IN LISTS LibSrc)
    SeqDevTarget("${SpaceDim}" 0)
    MpiDevTarget("${SpaceDim}" 0)
else()
    #set the files needed to be translated by ops.py from the app side
    set(AppSrcGenList mie_theory.cpp)
    set(AppKernelGenList mie_theory_kernel.inc)
    set(AppHeadList "")
    CreateTempDir()
    set(TMP_SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/tmp)
    set(HeadList ${LibHeadList} ${AppHeadList})
    WriteJsonConfig(${TMP_SOURCE_DIR} ${AppName} "${LibSrc}" "${AppSrcGenList}" "${AppKernelGenList}" "${HeadList}" ${SpaceDim})
    TranslateSourceCodes(${LibDir} "${LibSrcGenList}" "${AppSrcGenList}" ${TMP_SOURCE_DIR})
    SeqTarget("${SpaceDim}")
    MpiTarget("${SpaceDim}")
    CudaTarget("${SpaceDim}")
endif ()
